Minigames: maybe fix connect4